<resources>
    <string name="app_name">Oblig3TriviaQuiz</string>
    <string name="completed_questions">Fullførte spørsmål:</string>
    <string name="new_quiz">Ny quiz / fortsett</string>
    <string name="reset">Nullstill</string>
    <string name="logo_img_description">Trivia quiz</string>
    <string name="main_activity_title">TriviaQuiz - Hjem</string>
    <string name="show_info">Info. om appen</string>
    <string name="settings_button">Vis innstillinger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_fragment_title">Om Trivia Quiz</string>
    <string name="app_info">Versjon 1 \nLaget av Abdullah Karagøz som del av
        Mobil programmeringsfaget DTE-2603 ved UiT</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings_activity_title">TriviaQuiz - Innstillinger</string>
    <string name="nr_of_questions">Antall spørsmål</string>
    <string name="category_settings">Velg kategori</string>
    <string name="difficulty_settings">Velg vanskelighetsgrad</string>
    <string name="type_settings">Velg type spørsmål</string>
    <string name="quiz_activity_title">TriviaQuiz - Spørsmål</string>
    <string name="send_answers">Send svar</string>
    <string name="show_correct_answers">Se fasit?</string>
    <string name="results_text">"Resultat: "</string>
    <string name="score_text">"Karakter: "</string>
    <string name="warning_last_question">Swiping to next will end the quiz and show you results..You can\'t swipe back.</string>
    <string name="btn_new_quiz">Start new quiz</string>
    <string name="solutions_subtitle">Korrekte svar vist med grønn farge</string>
    <string name="tv_question_category">"Category: "</string>
    <string name="tv_question_difficulty">"Difficulty: "</string>
    <string name="question_number_2">"Spørsmål "</string>
    <string name="solutions_activity_title">TriviaQuiz - FASIT</string>
    <string name="home_button">Til startsiden</string>
    <string name="finish_first_text">Du må gjøre ferdig quizzen først</string>
    <string name="game_status">Fullførte spørsmål: 0/0</string>
</resources>